@@ -35,6 +35,8 @@ Release 1.1 Start 27/02/2021
 19. timestam.h: fix function prototype for timestamp()
 - 06/05/2021
 20. minisvc: removed mixed use of space and tab
+- 12/05/2021
+21. moved pathexec_run, pathexec_env to libqmail
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
